# connect5

adenddas_guatemala/: README.rst  __init__.py  __manifest__.py
adenddas_guatemala/models/: __init__.py  account_move.py
adenddas_guatemala/static/description/: index.html
adenddas_guatemala/views/: account_move.xml
bi_print_journal_entries/report/: report_journal_entries_view.xml
l10n_gt-14.0/: .pre-commit-config.yaml  README.md  requirements.txt
l10n_gt-14.0/l10n_gt_edi/data/: frases.xml  iva_affiliations.xml
l10n_gt-14.0/l10n_gt_edi/i18n/: es_GT.po
l10n_gt-14.0/l10n_gt_edi/models/: __init__.py  account_move.py  gt_dte_type.py  gt_iva.py  tax.py
l10n_gt-14.0/l10n_gt_edi/readme/: CONFIGURE.rst
l10n_gt-14.0/l10n_gt_edi/views/: account_journal.xml  account_move.xml  res_company.xml
l10n_gt-14.0/l10n_gt_infile/: __manifest__.py
l10n_gt-14.0/l10n_gt_infile/models/: account_move.py
l10n_gt-14.0/l10n_gt_infile/tests/: test_account_move.py
l10n_gt-14.0/l10n_gt_infile/views/: account_move.xml  res_company.xml
l10n_gt-14.0/l10n_gt_pos/: README.rst  __manifest__.py
l10n_gt-14.0/l10n_gt_pos/data/: res_partner.xml
l10n_gt_edi/: requirements.txt
l10n_gt_edi/l10n_gt_edi/: README.rst  __manifest__.py
l10n_gt_edi/l10n_gt_infile/: README.rst
l10n_gt_edi_orig/: pyproject.toml
l10n_gt_edi_orig/l10n_gt_edi/data/: server_actions.xml
l10n_gt_edi_orig/l10n_gt_edi/models/: account_journal.py  res_company.py  sale_order.py
l10n_gt_edi_orig/l10n_gt_edi/security/: ir.model.access.csv
l10n_gt_edi_orig/l10n_gt_edi/views/: account_tax.xml
l10n_gt_edi_orig/l10n_gt_infile/i18n/: es_GT.po
l10n_gt_extra/report/: asistente_reporte_compras.py  asistente_reporte_ventas.py  reporte_compras.py  reporte_ventas.py
l10n_gt_extra/views/: reporte_compras.xml  reporte_ventas.xml
(+34 files in other folders)
